# taller2-mensajeroX

./: README.md  README.md~
Cliente/: doxygenConfigCliente
Cliente/EjemploPantallas/: ColoresHexa.txt
Cliente/Mensajero/: .gitignore
Cliente/Mensajero/app/: app-release.apk  build.gradle  manifest-merger-release-report.txt  proguard-rules.pro
Cliente/Mensajero/app/src/main/: AndroidManifest.xml
Cliente/Mensajero/app/src/main/res/drawable/: ab_background_textured_msjxstyle.xml  btn_cab_done_msjxstyle.xml  msjxcomponentstyle_activated_background_holo_light.xml  msjxcomponentstyle_btn_check_holo_light.xml  msjxcomponentstyle_btn_default_holo_light.xml  msjxcomponentstyle_btn_radio_holo_light.xml  msjxcomponentstyle_edit_text_holo_light.xml  msjxcomponentstyle_item_background_holo_light.xml  msjxcomponentstyle_list_selector_background_transition_holo_light.xml  msjxcomponentstyle_list_selector_holo_light.xml  msjxcomponentstyle_progress_horizontal_holo_light.xml  msjxcomponentstyle_progress_indeterminate_horizontal_holo_light.xml  msjxcomponentstyle_spinner_background_holo_light.xml  msjxstyle_activated_background_holo_light.xml  msjxstyle_btn_default_holo_light.xml  msjxstyle_btn_radio_holo_light.xml  msjxstyle_edit_text_holo_light.xml  msjxstyle_item_background_holo_light.xml  msjxstyle_list_selector_background_transition_holo_light.xml  msjxstyle_list_selector_holo_light.xml  msjxstyle_spinner_background_holo_light.xml  msjxstyle_tab_indicator_holo.xml  progress_horizontal_msjxstyle.xml  selectable_background_msjxstyle.xml  spinner_background_ab_msjxstyle.xml  tab_indicator_ab_msjxstyle.xml
Cliente/Mensajero/app/src/main/res/layout/: activity_ajustes.xml  activity_authentication.xml  activity_chat.xml  activity_chat_action_bar.xml  activity_confirmar_datos.xml  activity_contact_info.xml  activity_contacts_list.xml  activity_conversation.xml  activity_conversations.xml  activity_conversations_list.xml  activity_imformacion.xml  activity_informacion.xml  activity_information.xml  activity_ip_port.xml  activity_location.xml  activity_main.xml  activity_phone_number_register.xml  activity_profile.xml  activity_register.xml  activity_registrar_usuario.xml  activity_settings.xml  activity_tab.xml  activity_user_logger.xml  child_layout.xml  dialog_broadcast.xml  ip_address_pop_up.xml  msjxstyle_tab_indicator_holo.xml  parent_layout.xml  row_contact.xml  row_conversation.xml  single_message_layout.xml
Cliente/Mensajero/app/src/main/res/menu/: menu_ajustes.xml  menu_authentication.xml  menu_chat.xml  menu_confirmar_datos.xml  menu_contact_info.xml  menu_conversation.xml  menu_imformacion.xml  menu_informacion.xml  menu_ip_port.xml  menu_location.xml  menu_phone_number_register.xml  menu_profile.xml  menu_register.xml  menu_registrar_usuario.xml  menu_settings.xml  menu_tab_layout.xml  menu_user_logger.xml
Cliente/Mensajero/app/src/main/res/values-v11/: styles_msjxcomponentstyle.xml  styles_msjxstyle.xml  (+2 more)
Documentacion/: .conf.py.swp  Makefile  conf.py  documentacion.sh  documentacionCodigo.sh  index.rst  index.rst~
Documentacion/DocumentacionCodigo/: cliente.rst  servidor.rst
Documentacion/DocumentacionCodigoServidor/html/: Localizacion_8h_source.html  Usuario_8h_source.html
Documentacion/GuiaAdministrador/: guiaadministrador.rst
Documentacion/GuiaDeUsuario/: guiadeusuario.rst  guiadeusuario.rst~
Documentacion/GuiaTecnica/: guiatecnica.rst  guiatecnica.rst~  pruebas.rst  tecnologias.rst
Documentacion/GuiaTecnica/diagramas/: diagramas.rst
Documentacion/GuiaTecnica/diagramas/imagenes/: entidades.dia  relaciones.dia  servidor.dia
Documentacion/_build/doctrees/: environment.pickle  index.doctree
Documentacion/_build/doctrees/GuiaDeUsuario/: guiadeusuario.doctree
Documentacion/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
Documentacion/_build/html/GuiaDeUsuario/: guiadeusuario.html
Documentacion/_build/html/_sources/: index.txt
Documentacion/_build/html/_sources/GuiaDeUsuario/: guiadeusuario.txt
Informe/: documentacionCodigo.sh
Servidor/: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt~  Logger.txt  cobertura.sh  convertura.sh  doxygenConfigServidor  main.cpp
Servidor/Base de Datos TEST/: 000004.sst  IDENTITY  LOG  LOG.old.1429464317792429  MANIFEST-000005
Servidor/TestRestApi/: .gitignore  restTest.cfg.sample  restTester.py  testCases.py
Servidor/lib/Modulos/: FindBZ2.cmake  FindCppUnit.cmake  FindRocksDB.cmake  FindRocksDB.cmake~  FindSnappy.cmake  FindZLIB.cmake  FindZlib.cmake
Servidor/src/: CMakeLists.txt  CMakeLists.txt~  constantes.h
Servidor/src/BaseDeDatos/: BaseDeDatos.cpp  BaseDeDatos.h  CMakeLists.txt
Servidor/src/Entidades/: CMakeLists.txt  CMakeLists.txt~  Conversacion.cpp  Conversacion.h  Mensaje.cpp  Mensaje.h  Persistible.cpp  Persistible.h  Usuario.cpp  Usuario.h
Servidor/src/Log/: CMakeLists.txt  CMakeLists.txt~  Loger.cpp  Loger.h  Logger.cpp  Logger.h
Servidor/src/Servidor/: CMakeLists.txt  Servicio.cpp  Servicio.h  Servidor.cpp  Servidor.h
Servidor/src/Utilidades/: CMakeLists.txt  CMakeLists.txt~  Localizacion.cpp  Localizacion.h  StringUtil.cpp  StringUtil.h  md5.cpp  md5.h
Servidor/src/WebServer/: CMakeLists.txt  CMakeLists.txt~
Servidor/src/json/: CMakeLists.txt
Servidor/test/: BaseDeDatos_test.cpp  CMakeLists.txt  CMakeLists.txt~  Conversacion_test.cpp  Servidor_test.cpp  TestUsuario.cpp  TestUsuario.h  Usuario_test.cpp  main.cpp  main.cpp~
Servidor/test/Base De Datos/: BaseDeDatosTests.cpp  BaseDeDatosTests.h
Servidor/test/BaseDeDatos/: BaseDeDatosTests.h  TestBaseDeDatos.cpp  TestBaseDeDatos.h
Servidor/test/Conversacion/: TestConversacion.cpp  TestConversacion.h
Servidor/test/Localizacion/: LugaresTest.txt  TestLocalizacion.cpp  TestLocalizacion.h
Servidor/test/Loger/: TestLoger.cpp  TestLoger.h
Servidor/test/StringUtil/: TestStringUtil.cpp  TestStringUtil.h
Servidor/test/Usuario/: CMakeLists.txt  CMakeLists.txt~  TestUsuario.cpp  TestUsuario.h
Servidor/test/Utilidades/: TestLocalizacion.cpp  TestLocalizacion.h
(+64 files in other folders)
